bluetooth: Fix profile priority comparison

BugLink: https://bugs.freedesktop.org/show_bug.cgi?id=72414